Location api added

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,9 @@
 	<h1>Welcome to Geotab</h1>
 	<button id="btn-close">Close</button>
 
+	<p id="location">Location</p>
+	<button id="btn-get-location">Get Location</button>
+
 	<script src="popup_script.js"></script>
 </body>
 </html>
