updated permissions and html

--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,9 @@
 	<p id="location">Location</p>
 	<button id="btn-get-location">Get Location</button>
 
+	<input type="text" id="urlInput" placeholder="Enter URL">
+	<button id="saveButton">Save URL</button>
+
 	<script src="popup_script.js"></script>
 </body>
 </html>
