Manual retrieve tabs button

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,8 @@
     <input type="text" id="urlInput" placeholder="Enter URL">
     <button id="saveButton">Save URL</button>
 
+	<button id="openTabsButton">Open Tabs Based on Location</button>
+
     <script src="popup_script.js"></script>
 </body>
 </html>
