--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,10 @@
 
 	<button id="openTabsButton">Open Tabs Based on Location</button>
 
+    <button id="viewSavedTabsButton">View Saved Tabs</button>
+
+    <div id="savedTabsContainer"></div>
+
     <script src="popup_script.js"></script>
 </body>
 </html>
