added location debugging

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,8 @@
 <body>
     <h1>Welcome to Geotab</h1>
     <button id="btn-close">Close</button>
+    <p>Location: <span id="location"></span></p>
+    <button id="get-location">Get location</button>
 
     <input type="text" id="urlInput" placeholder="Enter URL">
     <button id="saveButton">Save URL</button>
