--- a/popup.html
+++ b/popup.html
@@ -57,6 +57,6 @@
 	</div>
 
 	<button id="btn-close">Close</button>
-	<script href="popup_script.js"></script>
+	<script src="popup_script.js"></script>
 </body>
 </html>
