added save tab field

--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,11 @@
 	</div>
 	<div id="clearfloat"></div>
 	<p id="location">Location</p>
+    <div id="search-field" style=display:none>
+        <input type="text" id="urlInput" placeholder="Enter URL">
+        <button id="saveButton">Save URL</button>
+        <button id="doneSaving">Done</button>
+    </div>
 	<div class="border" style="width:400px;">
 		<ul>
 			<li>Location: Leavey Library</li>
