--- a/popup.html
+++ b/popup.html
@@ -21,21 +21,22 @@
 
 <body class="doodle">
 	<!-- <h1 style="margin:0 auto;">Welcome to Geotab</h1> -->
-	<img src="img/geotab title.png" alt="TItle" width = "400" style="border: none;"/>
+	<img src="img/geotab title.png" alt="Title" width = "400" style="border: none;"/>
 	<div id="menu">
 		<button id="btn-get-location">Get Location</button>
 		<button id="btn-add-tabs">Add Tabs</button>
 	</div>
 	<div id="clearfloat"></div>
-	<p id="location">Location</p>
+	<h4>Current Location: <span id="location">Press "Get Location"...</span></h4>
     <div id="search-field" style=display:none>
         <input type="text" id="urlInput" placeholder="Enter URL">
         <button id="saveButton">Save URL</button>
         <button id="doneSaving">Done</button>
     </div>
+    <h2>Saved Locations</h2>
 	<div class="border" style="width:400px;">
 		<ul>
-			<li>Location: Leavey Library</li>
+			<h3>Location: Leavey Library</h3>
 			<li><a href="http://www.google.com">Tab1</a></li>
 			<li><a href="http://www.google.com">Tab2</a></li>
 			<li><a href="http://www.google.com">Tab3</a></li>
@@ -44,7 +45,7 @@
 	</div>
 	<div class="border" style="width:400px;">
 		<ul>
-			<li>Location: Doheny Library</li>
+			<h3>Location: Doheny Library</h3>
 			<li><a href="http://www.google.com">Tab1</a></li>
 			<li><a href="http://www.google.com">Tab2</a></li>
 			<li><a href="http://www.google.com">Tab3</a></li>
@@ -54,7 +55,7 @@
 	</div>
 	<div class="border" style="width:400px;">
 		<ul>
-			<li>Location: Dorm</li>
+			<h3>Location: Dorm</h3>
 			<li><a href="http://www.google.com">Tab1</a></li>
 			<li><a href="http://www.google.com">Tab2</a></li>
 			<button>Edit</button>
