added location naming

--- a/popup.html
+++ b/popup.html
@@ -28,10 +28,17 @@
 	</div>
 	<div id="clearfloat"></div>
 	<h4>Current Location: <span id="location">Press "Get Location"...</span></h4>
+    <div id="naming-location" style=display:none>
+        <button id="nameLocation">Name Location</button>
+    </div>
+    <div id="save-name" style="display:none">
+        <input type="text" id="nameInput" placeholder="Enter Name">
+        <button id="saveName">Save Name</button>
+    </div>
     <div id="search-field" style=display:none>
         <input type="text" id="urlInput" placeholder="Enter URL">
         <button id="saveButton">Save URL</button>
-        <button id="doneSaving">Done</button>
+        <button id="doneSaving">Close</button>
     </div>
     <h2>Saved Locations</h2>
 	<div class="border" style="width:400px;">
