--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,7 @@
 	</div>
 	<div id="clearfloat"></div>
 	<h4>Current Location: <span id="location">Press "Get Location"...</span></h4>
+	
     <div id="naming-location" style=display:none>
         <button id="nameLocation">Name Location</button>
     </div>
@@ -40,7 +41,15 @@
         <button id="saveButton">Save URL</button>
         <button id="doneSaving">Close</button>
     </div>
+	<div id="open" style=display:none>
+		<button id="openTabsButton"></button>
+	</div>
+
     <h2>Saved Locations</h2>
+    <button id="viewSavedTabsButton">View Saved Locations</button>
+
+	<div id="savedTabsContainer"></div>
+
 	<div class="border" style="width:400px;">
 		<ul>
 			<h3>Location: Leavey Library</h3>
