deleting locations functionality

--- a/popup.html
+++ b/popup.html
@@ -48,35 +48,9 @@
     <h2>Saved Locations</h2>
     <button id="viewSavedTabsButton">View Saved Locations</button>
 
-	<div id="savedTabsContainer"></div>
+	<div id="savedTabsContainer" style="width:400px;"></div>
 
-	<div class="border" style="width:400px;">
-		<ul>
-			<h3>Location: Leavey Library</h3>
-			<li><a href="http://www.google.com">Tab1</a></li>
-			<li><a href="http://www.google.com">Tab2</a></li>
-			<li><a href="http://www.google.com">Tab3</a></li>
-			<button>Edit</button>
-		</ul>
-	</div>
-	<div class="border" style="width:400px;">
-		<ul>
-			<h3>Location: Doheny Library</h3>
-			<li><a href="http://www.google.com">Tab1</a></li>
-			<li><a href="http://www.google.com">Tab2</a></li>
-			<li><a href="http://www.google.com">Tab3</a></li>
-			<li><a href="http://www.google.com">Tab4</a></li>
-			<button>Edit</button>
-		</ul>
-	</div>
-	<div class="border" style="width:400px;">
-		<ul>
-			<h3>Location: Dorm</h3>
-			<li><a href="http://www.google.com">Tab1</a></li>
-			<li><a href="http://www.google.com">Tab2</a></li>
-			<button>Edit</button>
-		</ul>
-	</div>
+	
 
 	<button id="btn-close">Close</button>
 	<script src="popup_script.js"></script>
